# AI-Sandbox

./: .gitignore  .ruff.toml  CHANGELOG.md  CONFIG.md  HISTORIAN_CHRONICLER_README.md  LLM_SETUP_GUIDE.md  Makefile  PROJECT_REQUIREMENTS.md  README.md  analyze_dimension_coverage.py  analyze_metrics.py  analyze_qtable.py  api_server.py  chapters.json  check_status.py  check_training_progress.py  chronicler_prompts.py  communication.py  compare_qtable_models.py  core_sim.py  cultural_development.py  custom_chapters.json  databank.py  debug_military_states.py  debug_power_ratios.py  enhanced_combat.py  export_rl_analytics.py  gemini_narrative.py  generate_chapters_example.py  historian_briefing.py  historian_briefing_output.json  historian_chronicler_pipeline.py  index.html  inspect_models.py  llm_config.py  main.py  markov_behavior.py  markov_dialogue.py  military_demo.py  military_rl_integration.py  (+52 more)
.github/: copilot-instructions.md
artifacts/: cultural_data.json  era_briefing.json  era_briefing_1000.json  era_briefing_clean.json  era_briefing_cli.json  military_training_metrics.csv
artifacts/checkpoints/: checkpoint_metadata_ep1000.json  checkpoint_metadata_ep10000.json  checkpoint_metadata_ep100000.json  checkpoint_metadata_ep11000.json  checkpoint_metadata_ep12000.json  checkpoint_metadata_ep13000.json  checkpoint_metadata_ep14000.json  checkpoint_metadata_ep15000.json  checkpoint_metadata_ep16000.json  checkpoint_metadata_ep17000.json  checkpoint_metadata_ep18000.json  checkpoint_metadata_ep19000.json  checkpoint_metadata_ep2000.json  checkpoint_metadata_ep20000.json  (+97 more)
docs/: AI_Sandbox_Technical_Report.md  AI_Sandbox_Technical_Report_v2.md  AI_Sandbox_Technical_Report_v3.md  ARCHIVE.md  CORE_SIM_BALANCE_UPDATES.md  ENVIRONMENTAL_AI_VERIFICATION_COMPLETE.md  MARKOV_INTEGRATION_COMPLETE.md  RL_DESIGN.md  STEP4_ENVIRONMENTAL_AI_COMPLETE.md  TEST_ORGANIZATION_COMPLETE.md
events/: __init__.py
factions/: __init__.py  faction.py
npcs/: npc.py
simulation/: __init__.py
tests/: README.md  run_tests.py
tribes/: __init__.py  fix_lint.py  tribal_communication.py  tribal_conflict.py  tribal_diplomacy.py  tribal_manager.py  tribal_politics.py  tribal_roles.py  tribal_structures.py  tribe.py
world/: __init__.py  chunk.py  engine.py  events.py  terrain.py  weather.py
(+73 files in other folders)
